--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: ^0.4.0 
   flutter_signature_pad: ^3.0.0
+  flutter_math_fork: ^0.7.2
+  flutter_launcher_icons: ^0.13.1
+
+
+
+flutter_icons:
+  #  image_path: "assets/icon/icon-128x128.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  image_path: "assets/icon/icon.png"
+
 
 
 dev_dependencies:
@@ -64,6 +75,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/quastion.json
+    - assets/math_topics.json
+    - assets/photo/math.jpg
+    - assets/icon/icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
