--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_signature_pad: ^3.0.0
   flutter_math_fork: ^0.7.2
   flutter_launcher_icons: ^0.13.1
+  confetti: ^0.7.0
 
 
 
